--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,6 +3,8 @@
 
   <!-- Images (and assets) are parsed and loaded from within the public directory -->
 
+ <section ui-view></section>
+
   <img src="/img/logo.png">
 </main>
 <footer>
