--- a/src/app/default/template.html
+++ b/src/app/default/template.html
@@ -1,5 +1,13 @@
 <h1>{{default.title}}</h1>
 
-<!-- <div ng-repeat="post in posts">
-	<img class="images" ng-src="{{post.images.standard_resolution.url}}" alt="{{default.title}}"/>
-</div> -->
+	<a href ng-click="grid = !grid" class="grid">grid</a>
+	<a href ng-click="grid = grid" class="list">list</a>
+
+
+<ul>
+	<li ng-repeat="post in posts" ng-hide="grid">
+		<img class="images" ng-src="{{post.images.standard_resolution.url}}" alt="{{post.caption.text}}"/>
+	<!-- 	<br>
+		{{post.caption.text}} -->
+	</li>
+</ul>
