Removed the ng-show ng-hide directives and added attributes to show two different states: default and list.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,10 @@
 <main>
   <!-- Images (and assets) are parsed and loaded from within the public directory -->
 
+<a ui-sref="default">Grid</a>
+<a ui-sref="list">List</a>
+
+
  <section ui-view></section>
 </main>
 <footer>
