--- a/src/app/list/template.html
+++ b/src/app/list/template.html
@@ -2,8 +2,8 @@
 
 <ul>
 	<li ng-repeat="post in posts">
-		<img class="images" ng-src="{{post.images.standard_resolution.url}}" alt="{{post.caption.text}}"/>
-	<!-- 	<br>
-		{{post.caption.text}} -->
+		<img class="list-images" ng-src="{{post.images.standard_resolution.url}}" alt="{{post.caption.text}}"/>
+		<br>
+		<p class="list-caption">{{post.caption.text}}</p>
 	</li>
 </ul>
