--- a/src/style/app.css
+++ b/src/style/app.css
@@ -6,6 +6,7 @@ body {
 
 a {
   color: #03A9F4;
+  text-decoration: none;
 }
 
 main {
@@ -23,4 +24,17 @@ ul {
 footer {
   text-align: center;
   font-size: 0.8em;
+}
+
+.grid {
+  display: inline-flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+.grid-images {
+  flex: 0 0 auto;
+  margin: 0 25px 25px 0;
+  max-height: 320px;
+
 }
