--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,10 @@
 <main>
   <!-- Images (and assets) are parsed and loaded from within the public directory -->
 
-<a ui-sref="default">Grid</a>
-<a ui-sref="list">List</a>
+<div class="bar">
+	<a ui-sref="default" class="grid-icon"></a>
+	<a ui-sref="list" class="list-icon"></a>
+</div>
 
 
  <section ui-view></section>
