Moved the index file back to public and app.css back to style. Trying to figure out how to deploy my project on Github pages without moving the index file to the root directory. I will try to create a dummy index file that redirects to the index.

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,4 +1,4 @@
-/* styles in src/style directory are applied to the whole page */
+/* styles in src/public directory are applied to the whole page */
 body {
   background: #FFFFFF;
   color: #03A9F4;
